--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   /* justify-content: space-between; */
-  border-bottom: 1px solid #2a363b;
+  border-bottom: 1px solid grey;
   margin-bottom: 15px;
   padding-bottom: 15px;
 }
